--- a/Src/com.blackfez.NetFezdoku.utilities/com.blackfez.NetFezdoku.utilities.csproj
+++ b/Src/com.blackfez.NetFezdoku.utilities/com.blackfez.NetFezdoku.utilities.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PuzzleGeneratorState.cs" />
     <Compile Include="RandomNumberThinger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
